# base-clean-arch-fastapi

./: .env.example  .gitignore  COMMITS.md  README.md  api.http  conftest.py  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/instructions/: commit-messages.instructions.md
src/: app.py  config.py  conftest.py  health.py  logger.py  main.py  mcp_server.py
src/api/: config.py  exception_handlers.py
src/api/middlewares/: access_log_middleware.py
src/app/: app.py  config.py  exception_handlers.py  health.py  logger.py
src/app/middlewares/: access_log_middleware.py  rate_limit_middleware.py
src/core/: app.py  config.py  health.py  logger.py  responses.py
src/features/resources/: di.py
src/middlewares/: access_log.py  access_log_middleware.py  rate_limit_middleware.py  security_headers_middleware.py
src/modules/resources/: di.py
src/modules/users/: di.py
src/resources/: api.py  di.py  dtos.py
src/resources/application/: create_resource.py  delete_resource.py  get_resource.py  list_resources.py  update_resource.py
src/resources/domain/: entities.py  errors.py  exceptions.py  models.py  repositories.py  value_objects.py
src/resources/infrastructure/: models.py  repositories.py
src/shared/: api.py  config.py  di.py  settings.py  utils.py
src/shared/application/: instrumentation.py
src/shared/domain/: bases.py  entity.py  error_codes.py  errors.py  exceptions.py  result.py  utils.py  value_object.py
src/shared/helpers/: odata_helper.py
src/shared/infrastructure/: api.py  db.py
src/shared/presentation/: api.py  dto.py  dtos.py  exception_handlers.py  exception_handling.py  exception_mapper.py  http_exception_handler.py  responses.py
src/shared/utils/: hash.py  odata_options.py  rfc_9457.py  uuid_tools.py  validation_types.py
tests/: conftest.py
tests/resources/application/: conftest.py  test_create_resource.py  test_delete_resource.py  test_get_resource.py  test_list_resources.py  test_update_resource.py
tests/resources/domain/: conftest.py  test_collections.py  test_resource_collections.py
tests/resources/presentation/: conftest.py  test_create_resource.py  test_delete_resource.py  test_get_resource.py  test_list_resources.py  test_partial_update_resource.py  (+1 more)
(+143 files in other folders)
