[project]
name = "hexagon-arch-api"
version = "0.1.0"
description = "Base project for FastAPI-based APIs with a clean architecture pattern."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "lagom>=2.7.7",
    "mypy>=1.17.0",
    "odata-v4-query>=0.3.0",
    "orjson>=3.11.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.4",
    "sqlactive>=0.3.6",
    "uvloop>=0.21.0",
    "validators>=0.35.0",
]
