[project]
name = "base-clean-arch-api"
version = "0.1.0"
description = "Base project for FastAPI-based APIs implementing clean architecture patterns for maintainable and testable code."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.22.1",
    "asgi-correlation-id==4.3.4",
    "dishka==1.10.1",
    "fastapi[standard]==0.136.1",
    "fastmcp==3.3.1",
    "httpx==0.28.1",
    "limits==5.8.0",
    "odata-v4-query==0.4.1",
    "pydantic-settings==2.14.1",
    "python-json-logger==4.1.0",
    "simple-result==0.2.0",
    "sqlactive==0.4.0",
    "sqladmin[full]==0.26.0",
    "structlog==25.5.0",
    "uvloop==0.22.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.14",
]

[tool.pytest.ini_options]
pythonpath = "src"
